--- a/doc/DokumenSkripsi/data.tex
+++ b/doc/DokumenSkripsi/data.tex
@@ -91,8 +91,8 @@
 % - double : jarak yang lebih lebar lagi, jika pembimbing berniat memberi 
 %            catatan yg banyak di antara baris (dianjurkan untuk bimbingan)
 %=============================================================================
-\linespacing{single}
-% \linespacing{onehalf}
+%\linespacing{single}
+ \linespacing{onehalf}
 %\linespacing{double}
 %=============================================================================
 
@@ -150,7 +150,7 @@
 %=============================================================================
 \namanpm{Herfan Heryandi}{2012730012}	%hilangkan tanda << & >>
 \tanggal{<<tanggal>>}{<<bulan>>}{2015}			%hilangkan tanda << & >>
-\pembimbing{<<pembimbing utama/1>>}{<<pembimbing pendamping/2>>}     
+\pembimbing{\PAS}{}     
 %Lihat singkatan pembimbing anda di file dosen.tex, hilangkan tanda << & >>
 \penguji{<<penguji 1>>}{<<penguji 2>>} 		
 %Lihat singkatan penguji anda di file dosen.tex, hilangkan tanda << & >>
@@ -170,9 +170,9 @@
 %			 - Gunakan perintah \texorpdfstring{\\}{} untuk baris baru
 %=============================================================================
 
-\judulINA{IT Student Portal: Pemanfaatan \textit{Web Scraping} untuk Kustomisasi Student Portal UNPAR}
+\judulINA{IT Student Portal: Pemanfaatan \textit{Web Scraping} untuk Kustomisasi Portal Akademik Mahasiswa}
 
-\judulENG{IT Student Portal: Exploiting Web Scraping for Student Portal UNPAR customization}
+\judulENG{IT Student Portal: Exploiting Web Scraping for Portal Akademik Mahasiswa Customization}
 
 %_____________________________________________________________________________
 %=============================================================================
