--- a/doc/DokumenSkripsi/pustaka.bib
+++ b/doc/DokumenSkripsi/pustaka.bib
@@ -10,7 +10,7 @@
 
 @misc{studentportalunpar,
 	author = "{Biro Teknologi Informasi UNPAR}",
-	title = "{Student Portal UNPAR}",
+	title = "{Portal Akademik Mahasiswa}",
 	howpublished = "\url{https://studentportal.unpar.ac.id}",
 	year = {2012}, 
 	note = "[Online; diakses 1-Juli-2015]"
