--- a/doc/DokumenSkripsi/Bab/bab1.tex
+++ b/doc/DokumenSkripsi/Bab/bab1.tex
@@ -6,7 +6,7 @@
 
 Portal Akademik Mahasiswa atau dikenal sebagai Student Portal UNPAR\cite{studentportalunpar} merupakan sistem informasi berbasis web yang digunakan oleh mahasiswa Universitas Katolik Parahyangan. Fitur-fitur yang dimiliki Prtal Akademik Mahasiswa yaitu rencana studi, jadwal, nilai dan indeks prestasi, dan pembayaran uang kuliah. Namun, fitur-fitur tersebut masih belum cukup untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika. 
 
-Salah satu fitur yang diperlukan oleh mahasiswa Teknik Informatika UNPAR adalah prasyarat mata kuliah. Dalam Teknik Informatika UNPAR, terdapat beberapa mata kuliah yang membutuhkan prasyarat baik prasyarat tempuh maupun prasyarat lulus. Prtal Akademik Mahasiswa sudah menyediakan fitur prasyarat mata kuliah namun kurang mendukung karena data yang ditampilkan kurang akurat. Misalnya dalam pengambilan mata kuliah "`AIF453 Kecerdasan Bisnis"' membutuhkan prasyarat lulus mata kuliah "`AIF204 Manajemen Informasi dan Basis Data"' atau lulus mata kuliah "`AIF102 Algoritma dan Struktur Data"' dengan IPK di atas 2.75 (Gambar \ref{fig:1_prasyarat_tinyurl}). Namun dalam Prtal Akademik Mahasiswa, prasyarat yang dicantumkan hanya lulus mata kuliah "`AIF204 Manajemen Informasi dan Basis Data"' (Gambar \ref{fig:1_prasyarat_student_portal}). Selain itu, pemeriksaan prasyarat mata kuliah tidak dilakukan secara otomatis sehingga setiap pengambilan mata kuliah tetap dianggap valid meskipun belum memenuhi prasyarat.
+Salah satu fitur yang diperlukan oleh mahasiswa Teknik Informatika UNPAR adalah prasyarat mata kuliah. Dalam Teknik Informatika UNPAR, terdapat beberapa mata kuliah yang membutuhkan prasyarat baik prasyarat tempuh maupun prasyarat lulus. Prtal Akademik Mahasiswa sudah menyediakan fitur prasyarat mata kuliah namun kurang mendukung karena data yang ditampilkan kurang akurat. Misalnya dalam pengambilan mata kuliah ``AIF453 Kecerdasan Bisnis'' membutuhkan prasyarat lulus mata kuliah ``AIF204 Manajemen Informasi dan Basis Data'' atau lulus mata kuliah ``AIF102 Algoritma dan Struktur Data'' dengan IPK di atas 2.75 (Gambar \ref{fig:1_prasyarat_tinyurl}). Namun dalam Portal Akademik Mahasiswa, prasyarat yang dicantumkan hanya lulus mata kuliah ``AIF204 Manajemen Informasi dan Basis Data'' (Gambar \ref{fig:1_prasyarat_student_portal}). Selain itu, pemeriksaan prasyarat mata kuliah tidak dilakukan secara otomatis sehingga setiap pengambilan mata kuliah tetap dianggap valid meskipun belum memenuhi prasyarat.
 
 jsoup\cite{jsoup} merupakan \textit{library} Java yang digunakan untuk menelusuri suatu situs web untuk mendapatkan suatu informasi. Informasi yang didapat berupa HTML yang kemudian diekstrak dan disajikan dalam bentuk \textit{Document Object Model}. Play Framework\cite{Leroux:2014} merupakan sebuah \textit{web framework} berbasis Java dan Scala. Play juga menggunakan \textit{design pattern} \textit{Model-View-Controller} (MVC) di mana \textit{model} dan \textit{controller} menggunakan bahasa Java sedangkan \textit{view} menggunakan bahasa Scala dan HTML. SIA Models\cite{siamodels} merupakan kelas-kelas dalam bahasa Java yang merepresentasikan Sistem Informasi Akademik UNPAR. Aplikasi akan dibuat dengan menggunakan Play Framework dan jsoup karena aplikasi didukung oleh SIA Models yang tersedia dalam bahasa Java. 
 
@@ -64,7 +64,7 @@ Metode-metode yang dilakukan pada skripsi ini adalah sebagai berikut:
 \begin{enumerate}
 	\item Melakukan studi mengenai \textit{library} jsoup, Chrome DevTools, dan Play Framework.
 	\item Melakukan wawancara.
-	\item Menganalisis Prtal Akademik Mahasiswa.
+	\item Menganalisis Portal Akademik Mahasiswa.
 	\item Mengimplementasikan \textit{web scraping} menggunakan \textit{library} jsoup.
 	\item Melakukan eksperimen dan pengujian.
 \end{enumerate}
