--- a/doc/DokumenSkripsi/Bab/bab2.tex
+++ b/doc/DokumenSkripsi/Bab/bab2.tex
@@ -44,7 +44,7 @@ Kelas ini merupakan \texttt{interface} yang menyediakan pengambilan data dari si
 		\textbf{Kembalian:} koneksi yang sama tetapi sudah diubah.
 		
 		\item \textbf{Connection method(Connection.Method method)} \\
-		Berfungsi untuk mengatur metode pengiriman HTTP, GET atau POST. Metode pengiriman secara \textit{default} adalah GET\\
+		Berfungsi untuk mengatur metode permintaan HTTP, GET atau POST. Metode pengiriman secara \textit{default} adalah GET\\
 		\textbf{Parameter:}
 		\begin{itemize}
 			\item \textbf{method} metode pengiriman permintaan HTTP.
@@ -81,12 +81,12 @@ Kelas ini merepresentasikan permintaan HTTP. Beberapa \textit{method} yang dimil
 		\textbf{Kembalian:} seluruh \textit{cookies}.	
 		
 		\item \textbf{Document parse()} \\
-		Berfungsi untuk mengurai \texttt{body} jawaban menjadi dokumen. \\
+		Berfungsi untuk mengurai \textit{body} jawaban menjadi dokumen. \\
 		\textbf{Kembalian:} koneksi yang sama tetapi sudah diubah.
 		
 		\item \textbf{String body()} \\
-		Berfungsi untuk mendapatkan \texttt{body} jawaban berupa \textit{string}. \\
-		\textbf{Kembalian:} \texttt{body} jawaban dalam bentuk \textit{string}.
+		Berfungsi untuk mendapatkan \textit{body} jawaban dalam bentuk \textit{string}. \\
+		\textbf{Kembalian:} \textit{body} jawaban dalam bentuk \textit{string}.
 \end{itemize}
 
 \subsection{Document}
@@ -189,14 +189,18 @@ Pemeriksaan elemen akan memperlihatkan node DOM dan CSS dari elemen yang dipilih
 \end{figure}
 
 \subsection{Network}
-Panel Network secara otomatis mencatat semua aktivitas jaringan saat DevTools terbuka. Pertama kali dibuka, panel Network masih kosong. Halaman web harus dimuat ulang untuk mulai mencatat aktivitas jaringan atau menunggu adanya aktivitas jaringan pada halaman web. Setiap sumber daya yang dicatat akan ditambahkan ke dalam sebuah baris dalam tabel Network (Gambar \ref{fig:2_network_panel}). Sedangkan kolom dari tabel Network berisi:
+Panel Network secara otomatis merekam semua aktivitas jaringan saat DevTools terbuka. Pertama kali dibuka, panel Network masih kosong. Halaman web harus dimuat ulang untuk mulai merekam aktivitas jaringan atau menunggu adanya aktivitas jaringan pada halaman web. Panel Network akan mencatat sumber daya dari aktivitas jaringan yang terekam. Setiap sumber daya akan ditambahkan ke dalam sebuah baris dalam tabel Network seperti pada gambar \ref{fig:2_network_panel}. Sedangkan kolom dari tabel Network berisi:
 \begin{itemize}
-	\item \textbf{Name dan Path}, nama dan URL dari \textit{resource}.
-	\item \textbf{Method}, HTTP \textit{request method}.
+	\item \textbf{Name dan Path}, nama dan URL dari sumber daya.
+	\item \textbf{Method}, metode permintaan HTTP.
 	\item \textbf{Status dan Text}, kode status HTTP dan pesan.
-	\item \textbf{Domain}, domain dari \textit{resource}.
+	\item \textbf{Domain}, domain dari sumber daya.
+	\item \textbf{Type}, tipe sumber daya yang diminta.
+	\item \textbf{Cookies}, banyaknya \textit{cookie} yang dikirim dalam permintaan.
+	\item \textbf{Size dan Content}, \textit{size} merupakan ukuran dari \textit{header} dan \textit{body} jawaban yang dikirim server sedangkan \textit{content} merupakan ukuran konten sumber daya.
+	\item \textbf{Timeline}, alur waktu dari seluruh aktivitas jaringan yang diminta.
 \end{itemize}
-%skip%
+%yg di-hide ny gmn??
 
 \begin{figure}[H]
 	\centering
@@ -206,24 +210,61 @@ Panel Network secara otomatis mencatat semua aktivitas jaringan saat DevTools te
 \end{figure}
 
 
-Ketika nama \textit{resource} dalam tabel Network diklik, maka akan muncul tab baru (Gambar \ref{fig:2_network_detail}). Beberapa detail dari tab baru tersebut adalah sebagai berikut:
+Ketika nama \textit{resource} dalam tabel Network diklik, maka akan muncul tab baru. Beberapa detail dari tab baru tersebut adalah sebagai berikut:
 \begin{itemize}
 	\item \textbf{Header}\\
-	Tab Header menampilkan \textit{request} URL, \textit{request method}, \textit{status code}, HTTP \textit{response} dan \textit{request header} beserta nilainya, dan \textit{query string parameter}. HTTP header dapat ditampilkan secara terformat atau dalam bentuk sumber dengan mengklik \textit{toggle button} "`view parsed"'/"`view source"'. Nilai-nilai parameter dapat ditampilkan dalam bentuk yang sudah didekodekan atau dalam bentuk URL yang dienkode dengan mengklik \textit{toggle button} "`view decoded"'/"`view URL encoded"' .
-	\item \textbf{Preview}\\
-	Tab Preview menampilkan tampilan \textit{resource} jika tersedia.
-	\item \textbf{Response}\\
-	Tab Response berisi konten resource yang tidak terformat.
-	\item \textbf{Cookies}\\
-	Tab Cookies menampilkan sebuah tabel yang terdiri dari seluruh \textit{cookie} yang dikirim dalam HTTP \textit{request} dan \textit{response} \textit{header}.
-\end{itemize}
-
-\begin{figure}
+	Tab Header menampilkan \textit{request} URL, \textit{request method}, \textit{status code}, HTTP \textit{response} dan \textit{request header} beserta nilainya, dan \textit{query string parameter}. HTTP header dapat ditampilkan secara terformat atau dalam bentuk sumber dengan mengklik tombol \textit{toggle} ``view parsed''/``view source''. Nilai-nilai parameter dapat ditampilkan dalam bentuk yang sudah didekodekan atau dalam bentuk URL yang dienkode dengan mengklik tombol \textit{toggle} ``view decoded''/``view URL encoded''. Sebagai contoh pada gambar \ref{fig:2_network_get} menampilkan \textit{header} pada metode permintaan GET sedangkan gambar \ref{fig:2_network_post} menampilkan \textit{header} pada metode permintaan POST.
+	
+\begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.5]{Gambar/network-header}
-	\caption{Detail \textit{Resource}} 
-	\label{fig:2_network_detail}
+	\caption{Contoh Tab Header pada Metode Permintaan GET} 
+	\label{fig:2_network_get}
 \end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{Gambar/network-post}
+	\caption{Contoh Tab Header pada Metode Permintaan POST} 
+	\label{fig:2_network_post}
+\end{figure}
+
+	\item \textbf{Preview}\\
+	Tab Preview menampilkan \textit{preview} sumber daya jika tersedia. Gambar \ref{fig:2_network_prev_available} menampilkan \textit{preview} yang tersedia pada sumber daya. Jika \textit{preview} tidak tersedia maka akan tampilan akan sama dengan jawaban seperti yang terlihat pada gambar \ref{fig:2_network_prev_notavailable}.
+	
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{Gambar/network-preview-available}
+	\caption{Contoh \textit{Preview} yang Tersedia} 
+	\label{fig:2_network_prev_available}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{Gambar/network-preview-notAvailable}
+	\caption{Contoh \textit{Preview} yang Tidak Tersedia} 
+	\label{fig:2_network_prev_notavailable}
+\end{figure}
+
+	\item \textbf{Response}\\
+	Tab Response berisi konten symber daya yang tidak terformat. Sebagai contoh pada gambar \ref{fig:2_network_response} menampilkan Tab Response dari sumber daya \texttt{main.php}.
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{Gambar/network-response}
+	\caption{Contoh Tab Response} 
+	\label{fig:2_network_response}
+\end{figure}
+
+	\item \textbf{Cookies}\\
+	Tab Cookies menampilkan sebuah tabel yang terdiri dari seluruh \textit{cookie} yang ditransmisikan dalam \textit{header} permintaan dan jawaban HTTP. Contoh dari tabel \textit{cookie} dapat dilihat pada gambar \ref{fig:2_network_cookies} dengan detail kolom sebagai berikut:
+	
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{Gambar/network-cookies}
+	\caption{Contoh Tabel pada Tab Cookie} 
+	\label{fig:2_network_cookies}
+\end{figure}
+\end{itemize}
 
 \section{Play Framework}
 \label{sec:play}
